@@ -86,6 +86,7 @@ Inline and included scripts are supported, as are the following DOM elements:
 <li>links - an array of Link objects</li>
 <li>title - readonly. The title of the page</li>
 <li>location - a synonym for window.location</li>
+<li>cookie - access to the document-specific cookies.</li>
 <li>&lt;name&gt; - the name of a form, image, or link</li>
 </ul>
 <h4>methods</h4>
